Fix overflow of error reporter. Fixes #820.

--- a/client/themes/default/style.css
+++ b/client/themes/default/style.css
@@ -1102,4 +1102,5 @@ input.category-color {
     padding: 1em;
     background-color: #444444;
     color: white;
+    overflow: inherit;
 }
